N진수게임 업데이트

--- a/HJ/temp_python.ipynb
+++ b/HJ/temp_python.ipynb
@@ -518,16 +518,467 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 3
+    }
+   ],
+   "source": [
+    "def solution(coins, N):\n",
+    "    answer=0\n",
+    "    coins = sorted(coins, reverse=True)\n",
+    "    for coin in coins:\n",
+    "        answer += N // coin\n",
+    "        N = N % coin\n",
+    "    return answer\n",
+    "solution([10,50,100,500], 1260)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "11475\n"
+     ]
+    }
+   ],
+   "source": [
+    "def solution(n):\n",
+    "    cnt=0\n",
+    "    for h in range(n+1):\n",
+    "        for m in range(60):\n",
+    "            for s in range(60):\n",
+    "                if '3' in str(h)+str(m)+str(s):cnt+=1\n",
+    "    return cnt\n",
+    "print(solution(5))\n",
+    "\n",
+    "def solution(n):\n",
+    "    cnt=0\n",
+    "    for h in range(n):\n",
+    "        if '3' in str(h):\n",
+    "            cnt+=1\n",
+    "    cnt*=3600\n",
+    "    for m in range(60):\n",
+    "        if '3' in str(m):\n",
+    "            cnt+=1\n",
+    "    cnt*=60\n",
+    "\n",
+    "    \n",
+    "    return cnt\n",
+    "# solution(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 33
+    }
+   ],
+   "source": [
+    "def solution(n,m,k):\n",
+    "    answer = 0\n",
+    "    # table = {i:0 for i in range(1,n+1)}\n",
+    "    table = [0 for i in range(n)]\n",
+    "    bomb=1\n",
+    "    while True:\n",
+    "        table[bomb] += 1\n",
+    "        if table[bomb] == m : break\n",
+    "        elif table[bomb] % 2 == 0: #짝수번받음\n",
+    "            bomb=(bomb + k) % n\n",
+    "        else:\n",
+    "            bomb=(bomb - k) % n\n",
+    "        answer+=1\n",
+    "    return answer\n",
+    "solution(3,3,2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[3, 2, 1]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 37
+    }
+   ],
+   "source": [
+    "list(reversed([1,2,3]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "{1, 2}"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 105
+    }
+   ],
+   "source": [
+    "\n",
+    "# c,k  = [[1,1],[2,1],[3,1],[2,0],[2,1]]\t,2\t#[1,3]\n",
+    "# c,k = [[2,1],[1,1],[3,1],[1,0],[1,1],[2,0],[2,1]],1  #[3]\n",
+    "# c,k=[[4, 1], [3, 1], [2, 1], [4, 0], [1, 1], [1, 0], [4, 1], [4, 0]],3 #[2,3]\n",
+    "# c,k=[[2, 1], [3, 1], [4, 1], [3, 0], [1, 1], [2, 0], [4, 0], [2, 1]],3 #[1,2]\n",
+    "# c,k=[[3, 1], [4, 1], [4, 0], [3, 0], [2, 1], [1, 1]],3 #[1,2]\n",
+    "\n",
+    "def solution(customer=c, K=k):\n",
+    "    rooms=set()\n",
+    "    que=[]\n",
+    "    for cus, order in customer:\n",
+    "        if order: # 1 :예약의 경우\n",
+    "            if len(rooms)<K: \n",
+    "                rooms.add(cus)\n",
+    "            else:\n",
+    "                que.append(cus)\n",
+    "        else: # 0 : 취소의 경우\n",
+    "            if cus in rooms:\n",
+    "                rooms.discard(cus)                \n",
+    "                if que:\n",
+    "                    rooms.add(que[0])\n",
+    "                    que = que[1:]\n",
+    "            else:\n",
+    "                que.remove(cus)\n",
+    "    return rooms\n",
+    "    # return sorted(rooms)\n",
+    "solution()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "1 1\n{1: 1} []\n2 1\n{1: 1, 2: 1} []\n3 1\n{1: 1, 2: 1} [3]\n2 0\n{1: 1, 3: 1} []\n2 1\n{1: 1, 3: 1} [2]\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[1, 3]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 65
+    }
+   ],
+   "source": [
+    "def solution(customer=c, K=k):\n",
+    "    rooms={}\n",
+    "    que=[]\n",
+    "    for cus, order in customer:\n",
+    "        print(cus,order)\n",
+    "        if order: # 1 :예약의 경우\n",
+    "            if len(rooms)<K: \n",
+    "                rooms[cus]=1\n",
+    "            else:\n",
+    "                que.append(cus)\n",
+    "        else: # 0 : 취소의 경우\n",
+    "            if cus in rooms:\n",
+    "                if que:\n",
+    "                    rooms[que[0]]=1\n",
+    "                    que = que[1:]\n",
+    "                del(rooms[cus])\n",
+    "            else:\n",
+    "                idx=que.index(cus)\n",
+    "                que.pop(idx)\n",
+    "        print(rooms, que)\n",
+    "    return sorted(rooms)\n",
+    "    \n",
+    "c,k  = [[1,1],[2,1],[3,1],[2,0],[2,1]]\t,2\t#[1,3]\n",
+    "# c,k = [[2,1],[1,1],[3,1],[1,0],[1,1],[2,0],[2,1]],1  #[3]    \n",
+    "solution(c,k)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[2, 3]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 108
+    }
+   ],
+   "source": [
+    "from collections import deque\n",
+    "def solution(customer, K):\n",
+    "    rooms={}\n",
+    "    que=deque([])\n",
+    "    for cus, order in customer:\n",
+    "        if order: # 1 :예약의 경우\n",
+    "            if len(rooms)<K: \n",
+    "                rooms[cus]=1\n",
+    "            else:\n",
+    "                que.append(cus)\n",
+    "        else: # 0 : 취소의 경우\n",
+    "            if cus in rooms:\n",
+    "                # if que:\n",
+    "                #     rooms[que.popleft()]=1\n",
+    "                del(rooms[cus])\n",
+    "            else:\n",
+    "                que.remove(cus)\n",
+    "    return sorted(rooms)\n",
+    "c,k=[[4, 1], [3, 1], [2, 1], [4, 0], [1, 1], [1, 0], [4, 1], [4, 0]],3  #[2,3]\n",
+    "solution(c,k)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "2\n1\n0\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "for b in range(3-1,-1,-1):\n",
+    "    print(b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[2, 3, 5, -1, 2]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 110
+    }
+   ],
+   "source": [
+    "def solution(truck, w):\n",
+    "    answer = []\n",
+    "    # trucks = {i:v for i in truck}\n",
+    "    for b in range(len(w)):\n",
+    "        for i in range(len(truck)):\n",
+    "            if truck[i] >= w[b]:\n",
+    "                answer.append(i+1)\n",
+    "                truck[i]-=w[b]\n",
+    "                break\n",
+    "        if len(answer) ==b: # 트럭에 넣은 박스\n",
+    "            answer.append(-1)\n",
+    "    return answer\n",
+    "\n",
+    "solution([1,4,5,2,4], [2,4,4,3,2])\n",
+    "# solution([2,7,4,9],[7,6,8])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[2, 4, -1]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 123
+    }
+   ],
+   "source": [
+    "def solution(truck, w):\n",
+    "    answer = []\n",
+    "    answerlen=0\n",
+    "    trucks = {i+1 : v for i,v in enumerate(truck)}\n",
+    "    for b in range(len(w)):\n",
+    "        for key in trucks:\n",
+    "            if trucks[key] >= w[b]:\n",
+    "                answer.append(key)\n",
+    "                answerlen+=1\n",
+    "                if trucks[key]==w[b]:\n",
+    "                    del(trucks[key])\n",
+    "                else:\n",
+    "                    trucks[key]-=w[b]\n",
+    "                break\n",
+    "        if answerlen == b: # 트럭에 넣은 박스\n",
+    "            answer.append(-1)\n",
+    "            answerlen+=1\n",
+    "    return answer\n",
+    "\n",
+    "# solution([1,4,5,2,4], [2,4,4,3,2])\n",
+    "# solution([2,7,4,9],[7,6,8])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "(8, 0)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 161
+    }
+   ],
+   "source": [
+    "divmod(16,2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 189,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'10'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 189
+    }
+   ],
+   "source": [
+    "# int('16',8)\n",
+    "# int(str(divmod(50,8)[0]) + str(divmod(50,8)[1]) , 8)\n",
+    "def divdp(n, div):\n",
+    "    words = \"0123456789ABCDEF\"\n",
+    "    ans=\"\"\n",
+    "    tmp=[]\n",
+    "    while n>=div:\n",
+    "        tmp.append(divmod(n,div)[1])\n",
+    "        n=divmod(n,div)[0]\n",
+    "    # tmp.append(divmod(n,div)[0])\n",
+    "    tmp.append(divmod(n,div)[1])\n",
+    "    while tmp:\n",
+    "        ans+=words[tmp.pop()]\n",
+    "    return ans\n",
+    "\n",
+    "divdp(16,16)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 201,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "0123456789ABCDEF101112131415161718191A1B1C1D1E1F\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "'13579BDF01234567'"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 201
+    }
+   ],
+   "source": [
+    "# n진수 게임 (카카오 2018블라인드)\n",
+    "def solution(n,t,m,p):\n",
+    "    def getdiv(n, div):\n",
+    "        words = \"0123456789ABCDEF\"\n",
+    "        ans=\"\"\n",
+    "        tmp=[]\n",
+    "        while n>=div:\n",
+    "            tmp.append(divmod(n,div)[1])\n",
+    "            n=divmod(n,div)[0]\n",
+    "        tmp.append(divmod(n,div)[1])\n",
+    "        while tmp:\n",
+    "            ans+=words[tmp.pop()]\n",
+    "        return ans\n",
+    "    start=0\n",
+    "    tmp = ''\n",
+    "    while len(tmp)< (t)*(m+1) :\n",
+    "        tmp +=  getdiv(start,n)\n",
+    "        start+=1\n",
+    "    answer = \"\"\n",
+    "    idx = p-1\n",
+    "    while len(answer) < t :\n",
+    "        answer+=tmp[idx]\n",
+    "        idx += m\n",
+    "    return answer\n",
+    "# n,t,m,p = 2,4,2,1\n",
+    "# n,t,m,p = 16,16,2,1\n",
+    "n,t,m,p = 16,16,2,2\n",
+    "solution(n,t,m,p) # n진법, 미리구할 수 t, 게임인원 m , 튜브의 순서 p"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "name": "python385jvsc74a57bd039a3f6769e595a50e593a296d8b0c78e5171348aaba449e974344d6732d07a14",
-   "display_name": "Python 3.8.5 64-bit ('base': conda)"
+   "name": "python394jvsc74a57bd0cb21448086e1b039f0143f4b6f3949a0ab18b782485cd082e49e693fdc0e34f1",
+   "display_name": "Python 3.9.4 64-bit ('base': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -539,7 +990,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.4"
+  },
+  "metadata": {
+   "interpreter": {
+    "hash": "cb21448086e1b039f0143f4b6f3949a0ab18b782485cd082e49e693fdc0e34f1"
+   }
   }
  },
  "nbformat": 4,
