--- a/HJ/temp_python.ipynb
+++ b/HJ/temp_python.ipynb
@@ -973,6 +973,125 @@
     "n,t,m,p = 16,16,2,2\n",
     "solution(n,t,m,p) # n진법, 미리구할 수 t, 게임인원 m , 튜브의 순서 p"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 3
+    }
+   ],
+   "source": [
+    "# 음료수 얼려먹기\n",
+    "# N X M 크기의 얼음틀, 구명이 뚫려있는부분은 0, 칸막이가 존재하는 부분은 1로 표시\n",
+    "# 한번에 만들 수 있는 아이스크림의 개수를 출력\n",
+    "ices=[\n",
+    "    [0,0,1,1,0],\n",
+    "    [0,0,0,1,1],\n",
+    "    [1,1,1,1,1],\n",
+    "    [0,0,0,0,0]\n",
+    "]\n",
+    "\n",
+    "n=len(ices)\n",
+    "m=len(ices[0])\n",
+    "\n",
+    "def dfs(x,y):\n",
+    "    if x<=-1 or x>=n or y<=-1 or y>= m:\n",
+    "        return False\n",
+    "    if ices[x][y]==0:\n",
+    "        ices[x][y]=1\n",
+    "        dfs(x-1,y)\n",
+    "        dfs(x,y-1)\n",
+    "        dfs(x+1,y)\n",
+    "        dfs(x,y+1)\n",
+    "        return True\n",
+    "    return False\n",
+    "ans=0\n",
+    "for i in range(n):\n",
+    "    for j in range(m):\n",
+    "        if dfs(i,j)==True: ans+=1\n",
+    "ans\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "skip\n10\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "[[3, 0, 5, 0, 7, 0],\n",
+       " [2, 3, 4, 5, 6, 7],\n",
+       " [0, 0, 0, 0, 0, 8],\n",
+       " [1, 1, 1, 1, 1, 9],\n",
+       " [1, 1, 1, 1, 1, 1]]"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 10
+    }
+   ],
+   "source": [
+    "# 미로탈출\n",
+    "\n",
+    "from collections import deque\n",
+    "maps=[\n",
+    "    [1,0,1,0,1,0],\n",
+    "    [1,1,1,1,1,1],\n",
+    "    [0,0,0,0,0,1],\n",
+    "    [1,1,1,1,1,1],\n",
+    "    [1,1,1,1,1,1]\n",
+    "]\n",
+    "n,m = len(maps),len(maps[0])\n",
+    "dx=[-1,1,0,0]\n",
+    "dy=[0,0,-1,1]\n",
+    "\n",
+    "def bfs(x,y):\n",
+    "    que = deque()\n",
+    "    que.append((x,y))\n",
+    "    while que:\n",
+    "        x,y = que.popleft()\n",
+    "        for i in range(4):\n",
+    "            nx=x+dx[i]\n",
+    "            ny=y+dy[i]\n",
+    "            if nx==n-1 and ny==m-1 : \n",
+    "                print('skip')\n",
+    "                return maps[x][y]+1\n",
+    "            if nx < 0 or ny < 0 or nx >= n or ny >= m : continue\n",
+    "            if maps[nx][ny]==0:\n",
+    "                continue\n",
+    "            if maps[nx][ny]==1:\n",
+    "                maps[nx][ny] = maps[x][y]+1\n",
+    "                que.append((nx,ny))\n",
+    "    return maps[n-1][m-1]\n",
+    "print(bfs(0,0))\n",
+    "maps\n"
+   ]
   }
  ],
  "metadata": {
