--- a/HJ/temp_python.ipynb
+++ b/HJ/temp_python.ipynb
@@ -1092,12 +1092,159 @@
     "print(bfs(0,0))\n",
     "maps\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # 다단계 칫솔판매\n",
+    "# enroll=[\"john\", \"mary\", \"edward\", \"sam\", \"emily\", \"jaimie\", \"tod\", \"young\"]\n",
+    "# referral=[\"-\",   \"-\",    \"mary\", \"edward\", \"mary\", \"mary\", \"jaimie\", \"edward\"]\n",
+    "# seller=[\"young\", \"john\", \"tod\", \"emily\", \"mary\"]\n",
+    "# amount=[12, 4, 2, 5, 10]\n",
+    "#[360, 958, 108, 0, 450, 18, 180, 1080]\n",
+    "\n",
+    "enroll,referral,seller,amount=[\"john\", \"mary\", \"edward\", \"sam\", \"emily\", \"jaimie\", \"tod\", \"young\"],[\"-\", \"-\", \"mary\", \"edward\", \"mary\", \"mary\", \"jaimie\", \"edward\"],[\"sam\", \"emily\", \"jaimie\", \"edward\"],[2, 3, 5, 4]\n",
+    "#[0, 110, 378, 180, 270, 450, 0, 0]\n",
+    "\n",
+    "\n",
+    "# enroll,referral,seller,amount=[\"john\", \"mary\", \"edward\", \"sam\", \"emily\", \"jaimie\", \"tod\", \"young\"],[\"-\", \"-\", \"mary\", \"edward\", \"mary\", \"mary\", \"jaimie\", \"edward\"],[\"sam\", \"emily\", \"jaimie\", \"edward\"],[2, 3, 5, 4]\n",
+    "# [0, 110, 378, 180, 270, 450, 0, 0] ==solution(enroll,referral,seller,amount)\n",
+    "# enroll,referral,seller,amount=[\"john\", \"mary\", \"edward\", \"sam\", \"emily\", \"jaimie\", \"tod\", \"young\"],[\"-\", \"-\", \"mary\", \"edward\", \"mary\", \"mary\", \"jaimie\", \"edward\"],[\"john\",'john'],[10,15]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 124
+    }
+   ],
+   "source": [
+    "from collections import defaultdict\n",
+    "def mktree(enroll, referral):\n",
+    "    dic=defaultdict()\n",
+    "    for ee, ref in zip(enroll,referral):\n",
+    "        if ref==\"-\":\n",
+    "            dic[ee] = ['',0]\n",
+    "        else:\n",
+    "            dic[ee]=[ref,0]\n",
+    "    return dic\n",
+    "def solution(enroll, referral, seller, amount):\n",
+    "    dic=mktree(enroll,referral)\n",
+    "    # print(dic)\n",
+    "    for sell,amou in zip(seller,amount):\n",
+    "        coin = amou*100\n",
+    "        forparent=coin//10\n",
+    "        \n",
+    "        if dic[sell][0]=='':# 부모가센터\n",
+    "            dic[sell][1] += coin-forparent\n",
+    "        \n",
+    "        else: # 다른추천자가있어 -> DFS\n",
+    "            que=[]\n",
+    "            que.append(sell)\n",
+    "            while que:\n",
+    "                now = que.pop()\n",
+    "                # print(now, coin, forparent)\n",
+    "                if now in dic:\n",
+    "                    if coin >= 1:\n",
+    "                        # print(now,':',dic[now][1],'+',round(coin-forparent))\n",
+    "                        dic[now][1] += round(coin-forparent)\n",
+    "                        que.append(dic[now][0])\n",
+    "                        coin = forparent\n",
+    "                        forparent = coin//10\n",
+    "                    else:\n",
+    "                        dic[now][1] += coin\n",
+    "    answer = [int(i[1][1]) for i in dic.items()]\n",
+    "    return answer\n",
+    "                \n",
+    "enroll,referral,seller,amount = [\"john\", \"mary\", \"edward\", \"sam\", \"emily\", \"jaimie\", \"tod\", \"young\"],[\"-\", \"-\", \"mary\", \"edward\", \"mary\", \"mary\", \"jaimie\", \"edward\"],[\"young\", \"john\", \"tod\", \"emily\", \"mary\"],[12, 4, 2, 5, 10]\n",
+    "[360, 958, 108, 0, 450, 18, 180, 1080] == solution(enroll,referral,seller,amount)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "{'john': ['-', 0], 'mary': ['-', 0], 'edward': ['mary', 0], 'sam': ['edward', 0], 'emily': ['mary', 0], 'jaimie': ['mary', 0], 'tod': ['jaimie', 0], 'young': ['edward', 0]}\n{'john': ['-', 0], 'mary': ['-', 0], 'edward': ['mary', 0], 'sam': ['edward', 180], 'emily': ['mary', 0], 'jaimie': ['mary', 0], 'tod': ['jaimie', 0], 'young': ['edward', 0]}\n{'john': ['-', 0], 'mary': ['-', 0], 'edward': ['mary', 18], 'sam': ['edward', 180], 'emily': ['mary', 0], 'jaimie': ['mary', 0], 'tod': ['jaimie', 0], 'young': ['edward', 0]}\n{'john': ['-', 0], 'mary': ['-', 2], 'edward': ['mary', 18], 'sam': ['edward', 180], 'emily': ['mary', 0], 'jaimie': ['mary', 0], 'tod': ['jaimie', 0], 'young': ['edward', 0]}\n{'john': ['-', 0], 'mary': ['-', 2], 'edward': ['mary', 18], 'sam': ['edward', 180], 'emily': ['mary', 270], 'jaimie': ['mary', 0], 'tod': ['jaimie', 0], 'young': ['edward', 0]}\n{'john': ['-', 0], 'mary': ['-', 29], 'edward': ['mary', 18], 'sam': ['edward', 180], 'emily': ['mary', 270], 'jaimie': ['mary', 0], 'tod': ['jaimie', 0], 'young': ['edward', 0]}\n{'john': ['-', 0], 'mary': ['-', 29], 'edward': ['mary', 18], 'sam': ['edward', 180], 'emily': ['mary', 270], 'jaimie': ['mary', 450], 'tod': ['jaimie', 0], 'young': ['edward', 0]}\n{'john': ['-', 0], 'mary': ['-', 74], 'edward': ['mary', 18], 'sam': ['edward', 180], 'emily': ['mary', 270], 'jaimie': ['mary', 450], 'tod': ['jaimie', 0], 'young': ['edward', 0]}\n{'john': ['-', 0], 'mary': ['-', 74], 'edward': ['mary', 378], 'sam': ['edward', 180], 'emily': ['mary', 270], 'jaimie': ['mary', 450], 'tod': ['jaimie', 0], 'young': ['edward', 0]}\n"
+     ]
+    },
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 108
+    }
+   ],
+   "source": [
+    "# New \n",
+    "def solution(enroll,referral,seller,amount):\n",
+    "    def dfs(ref,prc):\n",
+    "        global dic\n",
+    "        print(dic)\n",
+    "        remain = 0 if int(prc)<10 else prc//10\n",
+    "        dic[ref][1] += prc - remain\n",
+    "        parnt = dic[ref][0]\n",
+    "        if parnt=='-' : return\n",
+    "        else:\n",
+    "            return dfs(parnt,remain)\n",
+    "    global dic\n",
+    "    dic = {en:[ref,0]  for en,ref in zip(enroll,referral)}\n",
+    "    for sel,mnt in zip(seller,amount):\n",
+    "        price=mnt*100\n",
+    "        dfs(sel,price)\n",
+    "    return [i[1][1] for i in dic.items()]\n",
+    "    \n",
+    "enroll,referral,seller,amount=[\"john\", \"mary\", \"edward\", \"sam\", \"emily\", \"jaimie\", \"tod\", \"young\"],[\"-\", \"-\", \"mary\", \"edward\", \"mary\", \"mary\", \"jaimie\", \"edward\"],[\"sam\", \"emily\", \"jaimie\", \"edward\"],[2, 3, 5, 4]\n",
+    "[0, 110, 378, 180, 270, 450, 0, 0] == solution(enroll,referral,seller,amount)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "name": "python394jvsc74a57bd0cb21448086e1b039f0143f4b6f3949a0ab18b782485cd082e49e693fdc0e34f1",
-   "display_name": "Python 3.9.4 64-bit ('base': conda)"
+   "name": "python385jvsc74a57bd039a3f6769e595a50e593a296d8b0c78e5171348aaba449e974344d6732d07a14",
+   "display_name": "Python 3.8.5 64-bit ('base': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1109,7 +1256,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.4"
+   "version": "3.8.5"
   },
   "metadata": {
    "interpreter": {
