--- a/HJ/temp_python.ipynb
+++ b/HJ/temp_python.ipynb
@@ -62,6 +62,7 @@
     "    Human(\"Batista\", 32),\n",
     "    Human(\"Charlse\", 37),\n",
     "    Human(\"Dolphine\", 30),\n",
+    "    \n",
     "    Human(\"Eva\", 26),\n",
     "    Human(\"Frin\", 18),\n",
     "    Human(\"Gless\", 42),\n",
@@ -213,10 +214,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "120"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def memoize_factorial(f): \n",
+    "    memory = {1:1,2:2} \n",
+    "    def wrapper(*args, **kargs):\n",
+    "        k=f(*args,**kargs)\n",
+    "        i=2\n",
+    "        while i<k:\n",
+    "            i+=1\n",
+    "            memory[i] = memory[i-1] * i\n",
+    "        return memory[k]\n",
+    "    return wrapper\n",
+    "\n",
+    "@memoize_factorial\n",
+    "def facto(num): \n",
+    "    return num\n",
+    "facto(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(6, 120)"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def memoize_factorial(func): \n",
+    "    memory = {1:1,2:2}\n",
+    "    def wrapper(*args, **kargs):\n",
+    "        k=args[0]\n",
+    "        if k in memory : return memory[k]\n",
+    "        else:\n",
+    "            i = len(memory)\n",
+    "            while i<k:\n",
+    "                memory[i+1] = memory[i]*(i+1)\n",
+    "                i+=1\n",
+    "        return memory[k]\n",
+    "    return wrapper\n",
+    "\n",
+    "@memoize_factorial\n",
+    "def facto(num):\n",
+    "    if num==1: return 1\n",
+    "    else: return num * facto(num-1)\n",
+    "facto(3) , facto(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "120"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def memoize_factorial(f): \n",
+    "    memory = {} \n",
+    "    def wrap(args):\n",
+    "        if args in memory:\n",
+    "            return memory[args]\n",
+    "        memory[args]=f(args)\n",
+    "        return memory[args]\n",
+    "    return wrap\n",
+    "\n",
+    "@memoize_factorial\n",
+    "def facto(num): \n",
+    "    if num==1:\n",
+    "        return 1\n",
+    "    else :\n",
+    "        return num * facto(num-1)    \n",
+    "facto(5)"
+   ]
   },
   {
    "cell_type": "code",
@@ -341,10 +441,67 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "[[1, 1, 1, 1, 1], [1, 0, 1, 1, 1], [1, 1, 1, 1, 1], [1, 1, 1, 1, 1], [1, 1, 1, 1, 1]]\nwidth : 5 \thieght :  5\nfor문 ::  x : 0 \ty : 0 \t 1\nfor문 ::  x : 0 \ty : 1 \t 1\nfor문 ::  x : 0 \ty : 2 \t 1\nfor문 ::  x : 0 \ty : 3 \t 1\nfor문 ::  x : 0 \ty : 4 \t 1\nfor문 ::  x : 1 \ty : 0 \t 1\nfor문 ::  x : 1 \ty : 1 \t 0\n[[1, 1, 1, 1, 1]]\nwidth : 5 \thieght :  1\nfor문 ::  x : 0 \ty : 0 \t 1\nfor문 ::  x : 0 \ty : 1 \t 1\nfor문 ::  x : 0 \ty : 2 \t 1\nfor문 ::  x : 0 \ty : 3 \t 1\nfor문 ::  x : 0 \ty : 4 \t 1\n[[1], [1], [1], [1], [1]]\nwidth : 1 \thieght :  5\nfor문 ::  x : 0 \ty : 0 \t 1\nfor문 ::  x : 1 \ty : 0 \t 1\nfor문 ::  x : 2 \ty : 0 \t 1\nfor문 ::  x : 3 \ty : 0 \t 1\nfor문 ::  x : 4 \ty : 0 \t 1\n[[1, 1, 1], [1, 1, 1], [1, 1, 1], [1, 1, 1], [1, 1, 1]]\nwidth : 3 \thieght :  5\nfor문 ::  x : 0 \ty : 0 \t 1\nfor문 ::  x : 0 \ty : 1 \t 1\nfor문 ::  x : 0 \ty : 2 \t 1\nfor문 ::  x : 1 \ty : 0 \t 1\nfor문 ::  x : 1 \ty : 1 \t 1\nfor문 ::  x : 1 \ty : 2 \t 1\nfor문 ::  x : 2 \ty : 0 \t 1\nfor문 ::  x : 2 \ty : 1 \t 1\nfor문 ::  x : 2 \ty : 2 \t 1\nfor문 ::  x : 3 \ty : 0 \t 1\nfor문 ::  x : 3 \ty : 1 \t 1\nfor문 ::  x : 3 \ty : 2 \t 1\nfor문 ::  x : 4 \ty : 0 \t 1\nfor문 ::  x : 4 \ty : 1 \t 1\nfor문 ::  x : 4 \ty : 2 \t 1\n[[1, 1, 1, 1, 1], [1, 1, 1, 1, 1], [1, 1, 1, 1, 1]]\nwidth : 5 \thieght :  3\nfor문 ::  x : 0 \ty : 0 \t 1\nfor문 ::  x : 0 \ty : 1 \t 1\nfor문 ::  x : 0 \ty : 2 \t 1\nfor문 ::  x : 0 \ty : 3 \t 1\nfor문 ::  x : 0 \ty : 4 \t 1\nfor문 ::  x : 1 \ty : 0 \t 1\nfor문 ::  x : 1 \ty : 1 \t 1\nfor문 ::  x : 1 \ty : 2 \t 1\nfor문 ::  x : 1 \ty : 3 \t 1\nfor문 ::  x : 1 \ty : 4 \t 1\nfor문 ::  x : 2 \ty : 0 \t 1\nfor문 ::  x : 2 \ty : 1 \t 1\nfor문 ::  x : 2 \ty : 2 \t 1\nfor문 ::  x : 2 \ty : 3 \t 1\nfor문 ::  x : 2 \ty : 4 \t 1\n15\n"
+      "[[1, 1, 1, 1, 1], [1, 0, 1, 1, 1], [1, 1, 1, 1, 1], [1, 1, 1, 1, 1], [1, 1, 1, 1, 1]]\n",
+      "width : 5 \thieght :  5\n",
+      "for문 ::  x : 0 \ty : 0 \t 1\n",
+      "for문 ::  x : 0 \ty : 1 \t 1\n",
+      "for문 ::  x : 0 \ty : 2 \t 1\n",
+      "for문 ::  x : 0 \ty : 3 \t 1\n",
+      "for문 ::  x : 0 \ty : 4 \t 1\n",
+      "for문 ::  x : 1 \ty : 0 \t 1\n",
+      "for문 ::  x : 1 \ty : 1 \t 0\n",
+      "[[1, 1, 1, 1, 1]]\n",
+      "width : 5 \thieght :  1\n",
+      "for문 ::  x : 0 \ty : 0 \t 1\n",
+      "for문 ::  x : 0 \ty : 1 \t 1\n",
+      "for문 ::  x : 0 \ty : 2 \t 1\n",
+      "for문 ::  x : 0 \ty : 3 \t 1\n",
+      "for문 ::  x : 0 \ty : 4 \t 1\n",
+      "[[1], [1], [1], [1], [1]]\n",
+      "width : 1 \thieght :  5\n",
+      "for문 ::  x : 0 \ty : 0 \t 1\n",
+      "for문 ::  x : 1 \ty : 0 \t 1\n",
+      "for문 ::  x : 2 \ty : 0 \t 1\n",
+      "for문 ::  x : 3 \ty : 0 \t 1\n",
+      "for문 ::  x : 4 \ty : 0 \t 1\n",
+      "[[1, 1, 1], [1, 1, 1], [1, 1, 1], [1, 1, 1], [1, 1, 1]]\n",
+      "width : 3 \thieght :  5\n",
+      "for문 ::  x : 0 \ty : 0 \t 1\n",
+      "for문 ::  x : 0 \ty : 1 \t 1\n",
+      "for문 ::  x : 0 \ty : 2 \t 1\n",
+      "for문 ::  x : 1 \ty : 0 \t 1\n",
+      "for문 ::  x : 1 \ty : 1 \t 1\n",
+      "for문 ::  x : 1 \ty : 2 \t 1\n",
+      "for문 ::  x : 2 \ty : 0 \t 1\n",
+      "for문 ::  x : 2 \ty : 1 \t 1\n",
+      "for문 ::  x : 2 \ty : 2 \t 1\n",
+      "for문 ::  x : 3 \ty : 0 \t 1\n",
+      "for문 ::  x : 3 \ty : 1 \t 1\n",
+      "for문 ::  x : 3 \ty : 2 \t 1\n",
+      "for문 ::  x : 4 \ty : 0 \t 1\n",
+      "for문 ::  x : 4 \ty : 1 \t 1\n",
+      "for문 ::  x : 4 \ty : 2 \t 1\n",
+      "[[1, 1, 1, 1, 1], [1, 1, 1, 1, 1], [1, 1, 1, 1, 1]]\n",
+      "width : 5 \thieght :  3\n",
+      "for문 ::  x : 0 \ty : 0 \t 1\n",
+      "for문 ::  x : 0 \ty : 1 \t 1\n",
+      "for문 ::  x : 0 \ty : 2 \t 1\n",
+      "for문 ::  x : 0 \ty : 3 \t 1\n",
+      "for문 ::  x : 0 \ty : 4 \t 1\n",
+      "for문 ::  x : 1 \ty : 0 \t 1\n",
+      "for문 ::  x : 1 \ty : 1 \t 1\n",
+      "for문 ::  x : 1 \ty : 2 \t 1\n",
+      "for문 ::  x : 1 \ty : 3 \t 1\n",
+      "for문 ::  x : 1 \ty : 4 \t 1\n",
+      "for문 ::  x : 2 \ty : 0 \t 1\n",
+      "for문 ::  x : 2 \ty : 1 \t 1\n",
+      "for문 ::  x : 2 \ty : 2 \t 1\n",
+      "for문 ::  x : 2 \ty : 3 \t 1\n",
+      "for문 ::  x : 2 \ty : 4 \t 1\n",
+      "15\n"
      ]
     }
    ],
@@ -397,10 +554,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
-      "['s2', 's10', 's12', 's5']\n['s10', 's12', 's5']\n['s12', 's5']\n['s5']\n[('s1', 's2'), ('s2', 's10'), ('s2', 's12'), ('s2', 's5')]\n"
+      "['s2', 's10', 's12', 's5']\n",
+      "['s10', 's12', 's5']\n",
+      "['s12', 's5']\n",
+      "['s5']\n",
+      "[('s1', 's2'), ('s2', 's10'), ('s2', 's12'), ('s2', 's5')]\n"
      ]
     }
    ],
@@ -463,21 +624,21 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "1001\n"
      ]
     },
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "884"
       ]
      },
+     "execution_count": 66,
      "metadata": {},
-     "execution_count": 66
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -522,14 +683,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "6"
       ]
      },
+     "execution_count": 3,
      "metadata": {},
-     "execution_count": 3
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -549,8 +710,8 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "11475\n"
      ]
@@ -588,14 +749,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "[3, 2, 1]"
       ]
      },
+     "execution_count": 37,
      "metadata": {},
-     "execution_count": 37
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -608,14 +769,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "[2, 4, -1]"
       ]
      },
+     "execution_count": 123,
      "metadata": {},
-     "execution_count": 123
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -648,14 +809,14 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "(8, 0)"
       ]
      },
+     "execution_count": 161,
      "metadata": {},
-     "execution_count": 161
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -668,21 +829,21 @@
    "metadata": {},
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "0123456789ABCDEF101112131415161718191A1B1C1D1E1F\n"
      ]
     },
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "'13579BDF01234567'"
       ]
      },
+     "execution_count": 201,
      "metadata": {},
-     "execution_count": 201
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -735,15 +896,248 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 5 11\n",
+      "6 8 11\n",
+      "9 10 11\n",
+      "9 9 9\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def bsearch(arr,target): # 이미 정렬되어있다고 가정\n",
+    "    st=0\n",
+    "    end=len(arr)-1\n",
+    "    while st <= end:\n",
+    "        mid = (st+end)//2\n",
+    "        print(st,mid,end)\n",
+    "        if target == arr[mid] : return True\n",
+    "        elif target < arr[mid]:\n",
+    "            end = mid-1\n",
+    "        else : \n",
+    "            st = mid+1\n",
+    "    return False\n",
+    "\n",
+    "bsearch([1,2,3,4,5,6,7,8,9,20,300,500], 15)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# m\tmusicinfos\tanswer      start, end, name,  code\n",
+    "# m, musicinfos = \"ABCDEFG\",[\"12:00,12:14,HELLO,CDEFGAB\", \"13:00,13:05,WORLD,ABCDEF\"]#\t\"HELLO\"\n",
+    "# m, musicinfos = \"CC#BCC#BCC#BCC#B\",[\"03:00,03:30,FOO,CC#B\", \"04:00,04:08,BAR,CC#BCC#BCC#B\"]#\t\"FOO\"\n",
+    "m, musicinfos = \"ABC\",[\"12:00,12:14,HELLO,C#DEFGAB\", \"13:00,13:05,WORLD,ABCDEF\"]#\t\"WORLD\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ABC {'HELLO': ['C#DEFGABC#DEFG', 14, 0], 'WORLD': ['ABCDE', 5, 1]}\n",
+      "[[5, 1, 'WORLD']]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'WORLD'"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def solution(m, musicinfos):\n",
+    "    answer = ''\n",
+    "    melodys=['C','C#','D','D#','E','F','F#','G','G#','A','A#','B']\n",
+    "    dic={}\n",
+    "    songtime = len(m)\n",
+    "    for index,i in enumerate(musicinfos):\n",
+    "        st,end,name,melody=i.split(',')\n",
+    "        dic[name]=[songExtend(melody,max(songtime,times(st,end))),times(st,end),index]\n",
+    "    print(m,dic)\n",
+    "    tmp=[]\n",
+    "    for key in dic.keys():\n",
+    "        song=dic[key]\n",
+    "        # print(song)\n",
+    "        temp = song[0].find(m)\n",
+    "        if temp== -1 or song[0][(temp+songtime)%len(song[0])]=='#':\n",
+    "            continue\n",
+    "        tmp.append([song[1],song[2],key]) #음악길이 , 인덱스(들어온순서), 이름\n",
+    "    print(tmp)\n",
+    "    if tmp:\n",
+    "        return sorted(tmp, key=lambda x : (-x[0],x[1]))[0][-1]\n",
+    "    else:\n",
+    "        return \"(None)\"\n",
+    "\n",
+    "def songExtend(melody,songtime):\n",
+    "    mlen=len(melody)\n",
+    "    tmp=\"\"\n",
+    "    for i in range(songtime):\n",
+    "        tmp+=melody[i%mlen]\n",
+    "    return tmp\n",
+    "    \n",
+    "    \n",
+    "def times(s,e):\n",
+    "    st=s.split(':')\n",
+    "    end=e.split(':')\n",
+    "    starts=int(st[1])+ int(st[0])*60\n",
+    "    ends=int(end[1]) + int(end[0])*60\n",
+    "    return ends-starts \n",
+    "    \n",
+    "solution(m,musicinfos)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mkdic(musicinfos):\n",
+    "    def times(s,e):\n",
+    "        st=s.split(':')\n",
+    "        end=e.split(':')\n",
+    "        starts=int(st[1])+ int(st[0])*60\n",
+    "        ends=int(end[1]) + int(end[0])*60\n",
+    "        return ends-starts\n",
+    "    def mksong(mlen, code):\n",
+    "        tmp=''\n",
+    "        for i in range(mlen):\n",
+    "            tmp += code[i%mlen]\n",
+    "    mdic={}\n",
+    "    for i in musicinfos:\n",
+    "        st,end,name,code = i.split(',')\n",
+    "        mlen = times(st,end)\n",
+    "        mdic[name] = [mlen, ]\n",
+    "    \n",
+    "def solution(m, musicinfos):\n",
+    "    codes = ['C', 'C#', 'D', 'D#', 'E', 'F', 'F#', 'G', 'G#', 'A', 'A#', 'B']\n",
+    "    mdic = {name : [] for st,end,name,code in musicinfos}\n",
+    "    "
+   ]
+  },
+  {
+   "source": [
+    "def solution(m,n,board):\n",
+    "    answer=0\n",
+    "    bd=[[i for i in row] for row in board]\n",
+    "    while True:\n",
+    "        bklist=[]\n",
+    "        for i in range(m-1): # 맨오른쪽과, 맨아랫라인은 체크할 필요가 없음 \n",
+    "            for j in range(n-1):\n",
+    "                tf,_=check(bd,i,j,m,n,0)\n",
+    "                if tf: # check\n",
+    "                    bklist.append([i,j])\n",
+    "        if bklist :\n",
+    "            for i,j in bklist:\n",
+    "                answer += check(bd,i,j,m,n,1)[1]\n",
+    "            for col in range(n):\n",
+    "                clearbd(bd,m,col)\n",
+    "        else:\n",
+    "            break\n",
+    "    return answer\n",
+    "\n",
+    "def check(bd,i,j,m,n,breaking):\n",
+    "    if bd[i][j]==0 and breaking!=1: return False, 0\n",
+    "    adx=[0,0,1,1]\n",
+    "    ady=[0,1,0,1]\n",
+    "    bkcnt=0\n",
+    "    for dx,dy in zip(adx,ady):\n",
+    "        x=i+dx\n",
+    "        y=j+dy\n",
+    "        if breaking:\n",
+    "            if bd[x][y]==0 : pass\n",
+    "            else: \n",
+    "                bd[x][y] = 0\n",
+    "                bkcnt+=1\n",
+    "        elif x<m and y<n:\n",
+    "            if bd[x][y] != bd[i][j]: \n",
+    "                return False, bkcnt\n",
+    "    return True, bkcnt\n",
+    "\n",
+    "def clearbd(bd,m,col):\n",
+    "    tmp=[]\n",
+    "    tog=1\n",
+    "    for row in range(m-1,-1,-1):\n",
+    "        if bd[row][col]!=0:\n",
+    "            tmp.append(bd[row][col])\n",
+    "            bd[row][col]=0\n",
+    "    for row in range(m-1 , m-len(tmp)-1 , -1):\n",
+    "        bd[row][col] = tmp.pop(0)\n",
+    "# m,n,board = 4,5,[\"CCBDE\", \"AAADE\", \"AAABF\", \"CCBBF\"]#14\n",
+    "m,n,board = 6,6,[\"TTTANT\", \"RRFACC\", \"RRRFCC\", \"TRRRAA\", \"TTMMMF\", \"TMMTTJ\"]#15\n",
+    "solution(m,n,board)"
+   ],
+   "cell_type": "code",
+   "metadata": {},
+   "execution_count": null,
+   "outputs": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cacheSize, cities=3,[\"Jeju\", \"Pangyo\", \"Seoul\", \"NewYork\", \"LA\", \"Jeju\", \"Pangyo\", \"Seoul\", \"NewYork\", \"LA\"]#50\n",
+    "# cacheSize, cities=3,[\"Jeju\", \"Pangyo\", \"Seoul\", \"Jeju\", \"Pangyo\", \"Seoul\", \"Jeju\", \"Pangyo\", \"Seoul\"]#21\n",
+    "# cacheSize, cities=2,[\"Jeju\", \"Pangyo\", \"Seoul\", \"NewYork\", \"LA\", \"SanFrancisco\", \"Seoul\", \"Rome\", \"Paris\", \"Jeju\", \"NewYork\", \"Rome\"]#60\n",
+    "# cacheSize, cities=5,[\"Jeju\", \"Pangyo\", \"Seoul\", \"NewYork\", \"LA\", \"SanFrancisco\", \"Seoul\", \"Rome\", \"Paris\", \"Jeju\", \"NewYork\", \"Rome\"]#52\n",
+    "# cacheSize, cities=2,[\"Jeju\", \"Pangyo\", \"NewYork\", \"newyork\"]#16\n",
+    "# cacheSize, cities=0,[\"Jeju\", \"Pangyo\", \"Seoul\", \"NewYork\", \"LA\"]#25"
+   ]
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "39a3f6769e595a50e593a296d8b0c78e5171348aaba449e974344d6732d07a14"
+  },
   "kernelspec": {
-   "name": "python385jvsc74a57bd039a3f6769e595a50e593a296d8b0c78e5171348aaba449e974344d6732d07a14",
+   "name": "python3",
    "display_name": "Python 3.8.5 64-bit ('base': conda)"
   },
   "language_info": {
